# az-container-session-llama-index

./: README.md
backend/: .env  .gitignore  main.py  pyproject.toml
backend/app/: settings.py
backend/app/api/routers/: chat.py
backend/app/engine/: __init__.py
backend/dataset/: StudentsPerformance.csv
frontend/: .gitignore  package.json
frontend/app/components/: header.tsx
frontend/app/components/ui/chat/: chat-message.tsx
